distro.config: build in CONFIG_USB_HIDDEV
Signed-off-by: Tyler Baker <tyler.baker@linaro.org>

--- a/kernel/configs/distro.config
+++ b/kernel/configs/distro.config
@@ -134,6 +134,9 @@ CONFIG_USB_NET_SMSC75XX=m
 CONFIG_USB_NET_SMSC95XX=m
 CONFIG_USB_NET_MCS7830=m
 
+# USB HID
+CONFIG_USB_HIDDEV=y
+
 # LEDs
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
