--- a/kernel/configs/distro.config
+++ b/kernel/configs/distro.config
@@ -234,3 +234,15 @@ CONFIG_PPP_SYNC_TTY=m
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PM8941_PWRKEY=y
 CONFIG_INPUT_JOYDEV=m
+
+# wireless
+CONFIG_PCI_MSI=n
+CONFIG_ATH10K=y
+CONFIG_ATH10K_PCI=m
+CONFIG_CRYPTO_CMAC=y
+CONFIG_CFG80211=y
+CONFIG_CFG80211_WEXT=y
+CONFIG_MAC80211=y
+CONFIG_MAC80211_DEBUGFS=y
+CONFIG_LOCALVERSION="-linaro"
+CONFIG_LOCALVERSION_AUTO=n
