--- a/kernel/configs/distro.config
+++ b/kernel/configs/distro.config
@@ -235,7 +235,7 @@ CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PM8941_PWRKEY=y
 CONFIG_INPUT_JOYDEV=m
 
-# wireless
+# wireless / bluetooth
 CONFIG_PCI_MSI=n
 CONFIG_ATH10K=y
 CONFIG_ATH10K_PCI=m
@@ -244,5 +244,7 @@ CONFIG_CFG80211=y
 CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=y
 CONFIG_MAC80211_DEBUGFS=y
+CONFIG_BT_HCIUART_QCA=y
+
 CONFIG_LOCALVERSION="-linaro"
 CONFIG_LOCALVERSION_AUTO=n
