--- a/kernel/configs/distro.config
+++ b/kernel/configs/distro.config
@@ -245,6 +245,10 @@ CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=y
 CONFIG_MAC80211_DEBUGFS=y
 CONFIG_BT_HCIUART_QCA=y
+CONFIG_BT_LE=y
+CONFIG_6LOWPAN=m
+CONFIG_6LOWPAN_DEBUGFS=y
+CONFIG_BT_6LOWPAN=m
 
 CONFIG_LOCALVERSION="-linaro"
 CONFIG_LOCALVERSION_AUTO=n
