debug.config: update debugging configs
Signed-off-by: Michael Scott <michael.scott@linaro.org>

--- a/kernel/configs/debug.config
+++ b/kernel/configs/debug.config
@@ -1,13 +1,25 @@
-CONFIG_DEBUG_MUTEXES=y
-CONFIG_DEBUG_SPINLOCK=y
-CONFIG_DEBUG_ATOMIC_SLEEP=y
-CONFIG_DEBUG_PAGEALLOC=y
-CONFIG_DEBUG_LOCK_ALLOC=y
-CONFIG_PROVE_LOCKING=y
-CONFIG_PROVE_RCU=y
-CONFIG_SLUB_DEBUG=y
-CONFIG_SLUB_DEBUG_ON=y
-CONFIG_KASAN=y
-CONFIG_DEBUG_SPINLOCK=y
-CONFIG_USB_GADGET_DEBUG=y
-CONFIG_USB_GADGET_DEBUG_FILES=y
+#CONFIG_DEBUG_MUTEXES=y
+#CONFIG_DEBUG_SPINLOCK=y
+#CONFIG_DEBUG_ATOMIC_SLEEP=y
+#CONFIG_DEBUG_PAGEALLOC=y
+#CONFIG_DEBUG_LOCK_ALLOC=y
+#CONFIG_SLUB_DEBUG=y
+#CONFIG_SLUB_DEBUG_ON=y
+#CONFIG_KASAN=y
+
+# Disabled CONFIGs below due to non-booting kernel
+#CONFIG_PROVE_LOCKING=y
+#CONFIG_PROVE_RCU=y
+
+# Additional kernel object debugging
+#CONFIG_DEBUG_OBJECTS=y
+#CONFIG_DEBUG_OBJECTS_ENABLE_DEFAULT=y
+#CONFIG_DEBUG_OBJECTS_FREE=y
+#CONFIG_DEBUG_OBJECTS_TIMERS=y
+#CONFIG_DEBUG_OBJECTS_WORK=y
+#CONFIG_DEBUG_OBJECTS_RCU_HEAD=y
+#CONFIG_DEBUG_OBJECTS_PERCPU_COUNTER=y
+#CONFIG_DEBUG_KMEMLEAK=y
+#CONFIG_DEBUG_VM=y
+#CONFIG_KMEMCHECK=y
+#CONFIG_KMEMCHECK_ENABLED=y
